# per-ai

./: .env.example  .gitignore  AGENT.md  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  PROJECT_STRUCTURE.md  README.md  check_libs.py  test.json  test_deepseek.py
agents/: .env.example  CLAUDE.md  Dockerfile  README.md  TEST_REPORT.md  benchmark_report.txt  langgraph.json  main.py  pyproject.toml  update_langgraph_json.py
agents/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
agents/agents/: entries.py
agents/api/: README.md  endpoints.py  interrupt_endpoints.py  main.py  service.py
agents/core/: README.md  agent.py  collaboration.py  context.py  conversation_logger.py  llm.py  llm_client.py  manager.py  master_agent.py  memory.py  monitor.py  protocol.py  react_loop.py  registry.py  router.py  session.py  skill.py  skill_framework.py  skills_loader.py  state.py
agents/docs/: article_search_tool.md  skill_framework_guide.md
agents/perall_agents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agents/providers/: README.md  __init__.py  azure_openai_provider.py  base.py  litellm_provider.py  openai_codex_provider.py  registry.py
agents/service_client/: __init__.py  backend_client.py  models.py
agents/skills/: example_weather_skill.py  registry.py
agents/tests/: benchmark_article_search.py  migration_diff_report.json  migration_validate.py  test_agents.py  test_article_search_tool.py  test_comprehensive_demo_agent.py  test_contract_backend_client.py  test_master_agent.py  (+8 more)
(+388 files in other folders)
