[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perall-agents"
version = "1.1.0"
description = "LangGraph CLI based intelligent agents service"
requires-python = ">=3.12,<4.0"
dependencies = [
  "fastapi>=0.100.0",
  "uvicorn>=0.23.0",
  "pydantic>=2.0.0",
  "httpx>=0.24.1",
  "langgraph>=0.2.0",
  "langgraph-cli>=0.1.60",
  "pandas>=2.0.0",
  "litellm>=1.0.0",
  "python-dotenv>=1.0.0",
  "loguru (>=0.7.3,<0.8.0)",
  "json-repair (>=0.58.6,<0.59.0)",
  "oauth-cli-kit (>=0.1.3,<0.2.0)"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
